@@ -1,3 +1,5 @@
+07-april-2010 - adelikat - fix bug that caused zapper.read() to crash when movie playback ends
+
 ---r1767 - FCEUX 2.1.3 Released---
 ---April 7 2010---
 
